# iidx_Switch

./: .gitignore  BMSData.hpp  BUILD_MAC.md  BgaManager.cpp  BgaManager.hpp  BmsLoader.cpp  BmsLoader.hpp  BmsonLoader.cpp  CMakeLists.txt  ChartProjector.cpp  ChartProjector.hpp  CommonTypes.hpp  Config.hpp  DanData.hpp  DanLoader.cpp  DanLoader.hpp  GeminiRhythm  Logger.hpp  Macintosh HD  Makefile  NoteRenderer.cpp  NoteRenderer.hpp  PlayEngine.cpp  PlayEngine.hpp  README.md  Scene2PDiffSelect.cpp  Scene2PDiffSelect.hpp  SceneDan.cpp  SceneDan.hpp  SceneDanSelect.cpp  SceneDanSelect.hpp  SceneModeSelect.cpp  SceneModeSelect.hpp  SceneOption.cpp  ScenePlay.cpp  ScenePlay.hpp  SceneResult.cpp  SceneResult.hpp  SceneSelect.cpp  SceneSelect.hpp  (+11 more)
bmsplayer/: BMSWITCH_mac  GeminiRhythm_mac  config.txt  danCourses.json  log.txt
bmsplayer/BMS/11iidxred/11001/: 11001_SPA.bmson  11001_SPA.boxwav  11001_SPH.bmson  11001_SPN.bmson  11001_SPN.boxwav
bmsplayer/BMS/11iidxred/11002/: 11002_SPA.bmson  11002_SPA.boxwav  11002_SPH.bmson  11002_SPN.bmson
bmsplayer/BMS/11iidxred/11004/: 11004_SPA.bmson  11004_SPA.boxwav  11004_SPB.bmson  11004_SPH.bmson  11004_SPN.bmson
bmsplayer/BMS/11iidxred/11005/: 11005_SPA.bmson  11005_SPA.boxwav  11005_SPH.bmson  11005_SPN.bmson
bmsplayer/BMS/11iidxred/11007/: 11007_SPA.bmson  11007_SPH.bmson  11007_SPH.boxwav  11007_SPN.bmson
bmsplayer/BMS/11iidxred/11008/: 11008_SPA.bmson  11008_SPH.bmson  11008_SPN.bmson  11008_SPN.boxwav
bmsplayer/BMS/11iidxred/11009/: 11009.boxwav  11009_SPA.bmson  11009_SPA.boxwav  11009_SPH.bmson  11009_SPH.boxwav  11009_SPN.bmson  11009_SPN.boxwav
bmsplayer/BMS/11iidxred/11010/: 11010_SPA.bmson  11010_SPA.boxwav  11010_SPH.bmson  11010_SPH.boxwav  11010_SPN.bmson  11010_SPN.boxwav
bmsplayer/BMS/11iidxred/11011/: 11011_SPA.bmson  11011_SPA.boxwav  11011_SPH.bmson  11011_SPN.bmson
bmsplayer/BMS/11iidxred/11012/: 11012_SPA.bmson  11012_SPB.bmson  11012_SPH.bmson  11012_SPL.bmson  11012_SPN.bmson
bmsplayer/BMS/11iidxred/11013/: 11013_SPA.bmson  11013_SPA.boxwav  11013_SPB.bmson  11013_SPH.bmson  11013_SPN.bmson
bmsplayer/BMS/11iidxred/11014/: 11014_SPA.bmson  11014_SPA.boxwav  11014_SPH.bmson  11014_SPN.bmson
bmsplayer/BMS/11iidxred/11015/: 11015_SPA.bmson  11015_SPH.bmson  11015_SPN.bmson  11015_SPN.boxwav
bmsplayer/BMS/11iidxred/11018/: 11018_SPA.bmson  11018_SPA.boxwav  11018_SPH.bmson  11018_SPN.bmson
bmsplayer/BMS/tensenmen/: _readme.txt  _readme2_(basetracks).txt  sp_shape_15_xerther.bme  sp_shape_1_spb.bme  sp_shape_24_dpx.boxwav  sp_shape_2_spn.bme  sp_shape_2_spn.boxwav  sp_shape_3_sph.bme  sp_shape_47_LNF.bml  sp_shape_4_spa.bme  sp_shape_4_spriahimi.bme  sp_shape_5_spcw_f.bme  sp_shape_5_spcw_f.boxwav  sp_shape_5_spi.bme  sp_shape_8_sppolychoron.bms  sp_shape_902_sink.pms  sp_shape_90_3d.pms  sp_shape_91_nm.pms  sp_shape_92_hp.pms  sp_shape_93_ex.pms  sp_shape_ox_chaos.pms  tensenmen2.boxwav
bmsplayer/fonts/: iidx_def.ttc
py/: boxwav_packer.py  dan_editor.py
(+106 files in other folders)
